# dividir-podcast

./: .env  Dockerfile  Procfile  README.md  app.py  main.py  pyproject.toml  replit.nix  requirements.txt
utils/: ffmpeg_split.py  supabase_upload.py
